src/validation/tests/snapshots/rusty__validation__tests__literals_validation_tests__int_literal_casts_max_values_are_validated.snap
---
source: src/validation/tests/literals_validation_tests.rs
expression: "&diagnostics"
---
error: Literal 256 out of range (BYTE)
  ┌─ <internal>:4:17
  │
4 │                 BYTE#256;
  │                 ^^^^^^^^ Literal 256 out of range (BYTE)

error: Literal 65536 out of range (UINT)
  ┌─ <internal>:7:17
  │
7 │                 UINT#65_536;
  │                 ^^^^^^^^^^^ Literal 65536 out of range (UINT)

error: Literal 4294967296 out of range (UDINT)
   ┌─ <internal>:10:17
   │
10 │                 UDINT#4_294_967_296;
   │                 ^^^^^^^^^^^^^^^^^^^ Literal 4294967296 out of range (UDINT)


